k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: myapp-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.demo.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: { name: backend-svc, port: { number: 5000 } }
      - path: /
        pathType: Prefix
        backend:
          service: { name: frontend-svc, port: { number: 80 } }
  - host: www.myapp.demo.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: { name: backend-svc, port: { number: 5000 } }
      - path: /
        pathType: Prefix
        backend:
          service: { name: frontend-svc, port: { number: 80 } }
  tls:
  - hosts: [myapp.demo.com, www.myapp.demo.com]
    secretName: myapp-demo-com-tls
